# cpp-vcpkg-starter

./: CMakeLists.txt  README.md  appveyor.yml  vcpkg.json
.github/workflows/: build_cmake.yml
src/: CMakeLists.txt
test/: tests.cpp
